- Modified to meet sonatype deployment requirements